added image to text detection

--- a/vocab-search-app/package.json
+++ b/vocab-search-app/package.json
@@ -6,14 +6,18 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@google-cloud/vision": "^2.3.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "google-auth-library": "^7.1.0",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.14.0",
+    "react-images-upload": "^1.2.8",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "sass": "^1.30.0"
   },
