--- a/vocab-search-app/.gitignore
+++ b/vocab-search-app/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# secret keys
+vision_api_key.json
+yandex_key.json
+
 # dependencies
 /node_modules
 /.pnp
